# khidl

./: .gitignore  LICENSE  Makefile  README.md  app.py  develrun.py  flake.nix  pyproject.toml  requirements.txt  schema.json
.github/workflows/: python-publish.yml
khidl/: app.py  args.py  downloader.py  search.py  soundtrack.py
khidl/lib/: args.py  downloader.py
lib/: args.py  downloader.py  search.py  soundtrack.py
