[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khinsider-dl"
version = "1.1.1"
readme = "README.md"
description = "Download soundtracks from downloads.khinsider.com with a useful and quick CLI"
authors = [{ name = "qweriop" }]
dependencies = [
	"beautifulsoup4",
	"requests",
	"tqdm",
	"jsonschema",
	"prettytable",
]

[project.scripts]
khidl = "khidl.app:CLI"
