[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khinsider-dl"
version = "1.2.6"
license = "MIT"
readme = "README.md"
description = "Download soundtracks from downloads.khinsider.com with a useful and quick CLI"
authors = [{ name = "qwerinope" }]
dependencies = [
	"beautifulsoup4",
	"requests",
	"tqdm",
	"jsonschema",
	"prettytable",
]

[project.urls]
Homepage = "https://github.com/qwerinope/khidl"
Issues = "https://github.com/qwerinope/khidl/issues"
Repository = "https://github.com/qwerinope/khidl.git"

[project.scripts]
khidl = "khidl.app:CLI"
